--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
+    "@supabase/supabase-js": "^2.49.1",
     "aos": "^2.3.4",
     "rxjs": "~7.8.0",
     "swiper": "^11.2.4",
